--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+	<div class="container">
+		<a href="#">This is a Heading</a>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
