--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="container">
-		<a href="#">This is a Heading</a>
+		This is a Heading
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
