--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<div class="container">
 		This is a Heading
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
