--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="container">
-		This is a Heading
+		<h1>This is a Heading</h1>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
