--- a/main.html
+++ b/main.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-	<div class="container">
-		<h4>This is a Heading</h4>
-	</div>
+	<section>
+		<div id="hello">
+			<u>This is a Heading</u>
+		</div>
+	</section>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
