--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<section>
+	<container>
 		<div id="hello">
 			<u>This is a Heading</u>
 		</div>
-	</section>
+	</container>
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
