--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<container>
-		<div>
-			<u>This is a Heading</u>
+	
+		<div class="main">
+			<h1><u>This is a Heading</u></h1>
 		</div>
-	</container>
+
 	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
